crates/analyzer/tests/snapshots/errors__duplicate_var_in_contract_method.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: duplicate variable definition
  ┌─ compile_errors/duplicate_var_in_contract_method.fe:3:9
  │
3 │         foo: u8
  │         ^^^ `foo` first defined here
4 │         foo: u8
  │         --- `foo` redefined here


